// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useHead Hook hook, no initial state returns a result object when run 1`] = `
Object {
  "state": Object {
    "base": undefined,
    "bodyAttrs": undefined,
    "htmlAttrs": undefined,
    "link": Array [],
    "meta": Array [],
    "script": Array [],
    "style": Array [],
    "title": undefined,
  },
}
`;

exports[`useHead Hook hook, no initial state returns a result object when run 2`] = `
<html>
  <head />
  <body>
    <div />
  </body>
</html>
`;

exports[`useHead Hook hook, with initial state returns a result object when run 1`] = `
Object {
  "state": Object {
    "base": Object {
      "href": "/",
      "target": "_blank",
    },
    "bodyAttrs": Object {
      "class": "root",
    },
    "htmlAttrs": Object {
      "lang": "en",
    },
    "link": Array [
      Object {
        "href": "/icons/icon-48x48.png",
        "rel": "apple-touch-icon",
        "sizes": "48x48",
      },
    ],
    "meta": Array [
      Object {
        "content": "Test Description",
        "name": "description",
      },
    ],
    "script": Array [
      Object {
        "as": "script",
        "href": "/framework.js",
        "rel": "preload",
      },
    ],
    "style": Array [
      Object {
        "children": "body {color: red}",
      },
    ],
    "title": "Test",
  },
}
`;

exports[`useHead Hook hook, with initial state returns a result object when run 2`] = `
<html
  lang="en"
>
  <head>
    Mark {}
    <title
      data-atomico-helmet="true"
    >
      Mark {}
      Test
      Mark {}
    </title>
    <meta
      content="Test Description"
      data-atomico-helmet="true"
      name="description"
    />
    <link
      data-atomico-helmet="true"
      href="/icons/icon-48x48.png"
      rel="apple-touch-icon"
      sizes="48x48"
    />
    <base
      data-atomico-helmet="true"
      href="/"
      target="_blank"
    />
    <style
      data-atomico-helmet="true"
    >
      Mark {}
      body {color: red}
      Mark {}
    </style>
    <script
      as="script"
      data-atomico-helmet="true"
      href="/framework.js"
      rel="preload"
    />
    Mark {}
  </head>
  <body
    class="root"
  >
    <div />
  </body>
</html>
`;

exports[`useHead Hook hook, with initial state returns a result object when run 3`] = `
<html>
  <head>
    Mark {}
    Mark {}
  </head>
  <body>
    <div />
  </body>
</html>
`;
